force-app/main/default/objects/TCP_STNSAP_1stService__c/TCP_STNSAP_1stService__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>STNSAP 1st service to get sold to accounts based on the sales area</description>
    <label>TCP_STNSAP_1stService</label>
</CustomObject>