force-app/main/default/objects/TCP_STNSAP_1stService__c/fields/Full_Load__c.field-meta.xml
<CustomField>
    <fullName>Full_Load__c</fullName>
    <label>Full Load</label>
    <length>1</length>
    <type>Text</type>
</CustomField>