force-app/main/default/objects/TCP_STNSAP_1stService__c/fields/Last_call_timestamp__c.field-meta.xml
<CustomField>
    <fullName>Last_call_timestamp__c</fullName>
    <label>Last call timestamp</label>
    <type>DateTime</type>
</CustomField>