force-app/main/default/objects/TCP_STNSAP_1stService__c/fields/Sales_Area__c.field-meta.xml
<CustomField>
    <fullName>Sales_Area__c</fullName>
    <externalId>true</externalId>
    <label>Sales Area</label>
    <length>4</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>